# barks-compleat-reader

./: .env  .gitattributes  .gitignore  .importlinter  .justfile  .pre-commit-config.yaml  .ruff-base.toml  .ruff.toml  .uvenv  CLAUDE.md  NOTICE  README.md  build-win-reader.sh  censorship-fixes.txt  cspell-words.txt  cspell.config.yaml  index.html  intro-to-barks-reader.txt  justfile  kivy-config-example.ini  main-onedir.spec  main-onefile.spec  main.py  pycrucible.toml  pycrucible.toml.win  pyproject.toml  pyrefly-baseline.json  pyrefly.toml  requirements.txt  spelling.dic  ty.toml  venv-postactivate  venv-predeactivate
docs/: BACKLOG.md  (+7 more)
src/barks-build-comic-images/: pyproject.toml
src/barks-build-comic-images/src/barks_build_comic_images/: __init__.py  build_comic_images.py  consts.py  image_io.py
src/barks-build-comic-images/tests/: __init__.py  test_build_comic_images.py
src/barks-fantagraphics/: cspell-words.txt  pyproject.toml
src/barks-fantagraphics/data/: vol-27-toc-gemini.json  vol-28-toc-gemini.json  vol-29-toc-gemini.json
src/barks-fantagraphics/data/story-indexes/: the-stories.csv
src/barks-fantagraphics/data/story-titles/: A Campaign of Note.ini  A Charitable Chore.ini  A Christmas for Shacktown.ini  A Cold Bargain.ini  A Descent Interval.ini  A Financial Fable.ini  A Honey of a Hen.ini  A Spicy Tale.ini  A Sticky Situation.ini  A Whale of a Story.ini  Adventure Down Under.ini  All Covers.ini  All One-Pagers.ini  All at Sea.ini  August Accident.ini  Back to Long Ago!.ini  Back to the Klondike.ini  Bad Day for Troop 'A'.ini  Balloonatics.ini  Bee Bumbles.ini  Biceps Blues.ini  Big-Top Bedlam.ini  Billions in the Hole.ini  Billions to Sneeze At.ini  Black Wednesday.ini  Boat Buster.ini  Bongo on the Congo.ini  Borderline Hero.ini  Bottled Battlers.ini  Boxed-In.ini  Brain-Strain.ini  Buffaloed by Buffaloes.ini  Camera Crazy.ini  Camping Confusion.ini  Cave of Ali Baba.ini  Cave of the Winds.ini  Censorship Fixes and Other Changes.ini  Cheltenham's Choice.ini  Christmas in Duckburg.ini  Christmas on Bear Mountain.ini  (+410 more)
src/barks-fantagraphics/scraps/: create-barks-title-modules.py  read_stories.py  read_stories_and_sub_dates.py  read_sub_dates.py
src/barks-fantagraphics/src/barks_fantagraphics/: __init__.py  barks_bibliography.py  barks_covers.py  barks_extra_info.py  barks_payments.py  barks_tags.py  barks_tags_data.py  barks_tags_enums.py  barks_title_utils.py  barks_titles.py  barks_words.py  comic_book.py  comic_book_info.py  comic_issues.py  comic_search.py  comics_cmd_args.py  comics_consts.py  comics_database.py  comics_helpers.py  comics_utils.py  entity_types.py  fanta_comics_info.py  fanta_series_data.py  fanta_series_info.py  ocr_file_paths.py  ocr_json_files.py  page_classes.py  pages.py  panel_bounding.py  panel_bounding_boxes.py  panel_boxes.py  panel_geometry.py  search_ports.py  speech_groupers.py  title_search.py  whoosh_barks_terms.py  whoosh_punct_tokenizer.py  whoosh_search_engine.py
src/barks-fantagraphics/tests/: __init__.py  test_all_covers_collection.py  test_barks_bibliography.py  test_barks_covers_locations.py  test_barks_payments.py  test_barks_payments_validation.py  test_barks_tags.py  test_barks_titles.py  test_build_covers_collection.py  test_build_one_pagers_collection.py  test_comic_book.py  test_comics_database.py  test_comics_helpers.py  test_comics_utils.py  test_fanta_comics_info.py  test_ocr_json_files.py  test_one_pagers.py  test_pages.py  test_panel_bounding.py  test_panel_boxes.py  test_panel_geometry.py  test_search_ports.py  test_speech_groupers.py  test_title_search.py  test_whoosh_search_engine.py  test_whoosh_tokenizer.py
src/barks-reader/: AGENTS.md  cspell-words.txt  pyproject.toml
src/barks-reader/src/barks_reader/: about_box.py  app_initializer.py  background_views.py  barks_reader_app.py  base_view_screen.kv  bottom_title_view_screen.kv  bottom_title_view_screen.py  comic_book_loader.py  comic_book_page_info.py  comic_book_reader.kv  comic_book_reader.py  comic_reader_manager.py  config_info.py  error_handling.py  fantagraphics_volumes.py  filtered_title_lists.py  first_run_installer.py  first_run_installer_show_message.py  font_manager.py  fun_image_view_screen.kv  fun_image_view_screen.py  get_panel_bytes.py.template.in  image_file_getter.py  index_screen.kv  index_screen.py  intro_compleat_barks_reader.kv  intro_compleat_barks_reader.py  json_settings_manager.py  kivy_standalone_error_popup.py  kivy_standalone_show_message.py  main_index_screen.kv  main_index_screen.py  main_screen.kv  main_screen.py  message_popup.py  minimal_config_info.py  open_zip_archive.py  open_zip_archive.py.template  panel_image_loader.py  panel_texture_loader.py  (+32 more)
src/barks-reader/tests/: __init__.py  conftest.py  test_background_views.py  test_bottom_title_view_screen.py  test_comic_book_loader.py  test_filtered_title_lists.py  test_font_manager.py  test_random_title_images.py  test_reader_formatter.py  test_reader_navigation.py  test_reader_utils.py  test_view_states.py
src/barks-reader/tests/benchmarks/: test_comic_reader_load_time.py
src/barks-reader/tests/unit/: __init__.py  conftest.py  test_action_bar.py  test_action_bar_helpers.py  test_action_bar_nav.py  test_alt_escape_key.py  test_app_initializer.py  test_app_window_geometry.py  test_archive_page_image_source.py  test_background_views.py  test_background_views_snapshot.py  test_bottom_title_view_screen.py  test_collection_page_groups.py  test_comic_book_info.py  test_comic_book_loader.py  test_comic_book_loader_platform_settings.py  test_comic_book_reader.py  test_comic_layout.py  test_comic_reader_manager.py  test_config_info.py  test_cpi_calculator.py  test_entity_index_screen.py  test_extra_info_markup.py  test_fakes.py  test_fantagraphics_volumes.py  test_filtered_title_lists.py  test_font_manager.py  test_fun_image_view_screen.py  test_history_screen.py  test_hyphen_break_engine.py  (+61 more)
src/okf-reader/: pyproject.toml
src/okf-reader/tests/: __init__.py  test_backgrounds.py  test_keynav.py  test_render.py  test_search.py  test_session.py  test_top_bar.py
(+427 files in other folders)
