[project]
name = "barks-compleat-reader"
version = "0.0.0"  # Virtual package - real version is written to _version.py by scripts/build.sh
description = "Kivy app to navigate and read the Fantagraphics Barks library."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "barks-reader",
    "barks-fantagraphics",
    "barks-build-comic-images",
    "comic-utils",
    "okf-reader",
    "better-exceptions==0.3.3",
    "certifi==2025.8.3",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography>=46.0.3",
    "setuptools>=80",
    "distro>=1.9.0",
    "docutils==0.22",
    "docutils-stubs==0.0.22",
    "dotenv>=0.9.9",
    "filetype==1.2.0",
    "idna==3.10",
    "intspan==1.6.1",
    "kivy==2.3.1",
    "kivy-deps-angle==0.4.0 ; sys_platform == 'win32'",
    "kivy-deps-glew==0.3.1 ; sys_platform == 'win32'",
    "kivy-deps-sdl2==0.8.0 ; sys_platform == 'win32'",
    "kivy-garden==0.1.5",
    "loguru==0.7.3",
    "loguru-config==0.1.0",
    # The workspace packages' third-party deps are also listed here so the root
    # project resolves a complete environment (uv sync), which is what Nuitka
    # compiles the standalone executable from (see scripts/build.sh).
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.6.1",
    "numpy==2.2.6",
    "pillow==12.1.1",
    "psutil>=7.1.3",
    "pygments==2.19.2",
    "pyobjc-core==11.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==11.1 ; sys_platform == 'darwin'",
    "pyphen>=0.17.2",
    "pypiwin32==223 ; sys_platform == 'win32'",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyuca>=1.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "screeninfo==0.8.1",
    "six==1.17.0",
    "typer>=0.21.1",
    "types-docutils==0.22.0.20250822",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "whoosh-reloaded>=2.7.5",
    "win32-setctime==1.2.0 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "nuitka>=2.5",
    "patchelf>=0.17 ; sys_platform == 'linux'",
    "pyinstrument>=5.1.1",
    "pyspellchecker>=0.8.4",
    "pytest>=8.4.2",
    "ruff>=0.15.4",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "snakeviz>=2.2.2",
    "matplotlib>=3.10",
    "scikit-learn>=1.6",
    "wordcloud>=1.9",
    "ty>=0.0.17",
    "pyrefly>=1.1.1",  # advisory (non-gating) second type checker; ty remains the gate
    "prek>=0.3.8",
    "sysrsync>=1.1.1",
    "weasyprint>=69.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/barks-reader/tests/unit",
    "src/barks-fantagraphics/tests",
    "src/barks-build-comic-images/tests",
    "src/okf-reader/tests",
]
addopts = """
    --import-mode=importlib
    --benchmark-time-unit=s
    --benchmark-columns=min,max,mean,stddev
    --benchmark-warmup=on
    --benchmark-group-by=func
"""

[tool.uv.workspace]
members = [
    "src/barks-reader",
    "src/barks-fantagraphics",
    "src/barks-build-comic-images",
    "src/barks-kivy-ui",
    "src/comic-utils",
    "src/okf-reader",
]

[tool.uv.sources]
barks-reader = { workspace = true }
barks-fantagraphics = { workspace = true }
barks-build-comic-images = { workspace = true }
barks-kivy-ui = { workspace = true }
comic-utils = { workspace = true }
okf-reader = { workspace = true }

[tool.coverage.run]
source = [
    "src/barks-reader/src/barks_reader",
    "src/barks-fantagraphics/src/barks_fantagraphics",
]
branch = true

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_empty = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    # First-run installer runs only inside the standalone executable
    "*/first_run_installer.py",
    "*/first_run_installer_show_message.py",
    # Standalone Kivy error/message popups run outside the normal app context
    "*/kivy_standalone_error_popup.py",
    "*/kivy_standalone_show_message.py",
]
