[project]
name = "barks-fantagraphics"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = ["comic-utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barks_fantagraphics"]

# Ship the external data/ dir inside the package in wheels, matching the layout the
# standalone (Nuitka) build creates and the packaged-location branch of
# comics_consts.INTERNAL_DATA_DIR expects.
[tool.hatch.build.targets.wheel.force-include]
"data" = "barks_fantagraphics/data"

[tool.uv.sources]
comic-utils = { workspace = true }
