[project]
name = "barks-reader"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "barks-fantagraphics",
    "barks-build-comic-images",
    "barks-kivy-ui",
    "comic-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barks_reader"]

[tool.uv.sources]
barks-fantagraphics = { workspace = true }
barks-build-comic-images = { workspace = true }
barks-kivy-ui = { workspace = true }
comic-utils = { workspace = true }
