[project]
name = "okf-reader"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kivy>=2.3",
    "markdown-it-py>=3",
    "mdit-py-plugins>=0.4",
    "pyyaml>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf_reader"]
